// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my test suite works 1`] = `
<canvas
  data-snapshot-image="99e2e6c9af9c059f1946964e4dbe5914d22d952261d6f26f0f013ed1a2f7f5677cb3643108bd25a90382cba24bf0fe84a1719d043b7063cbff8359b172ecb791"
  height="200"
  width="200"
/>
`;

exports[`my test suite works for canvas wrapped by other elements 1`] = `
<div>
  <canvas
  data-snapshot-image="f02c73bff2ff9dad8908b9ca2fa63c02d6d92cd91d46f87e539bb3c79ba7cbcbdb1251a3db132598fb4be3eed46c5150e2c70395f3089d1f8a860c3836645b0d"
  height="200"
  width="200"
/>
</div>
`;
